<resources xmlns:android="http://schemas.android.com/tools" android:ignore="NamespaceTypo">
    <string name="app_name">Events Place Finder</string>
    <string name="splashscreen">splashscreen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="appbar_scrolling_view_behavior">scroll</string>
    <string name="search_now">Search Now!</string>
    <string name="autoFillHint">like \'Birthdays\'</string>
    <string name="category">Category</string>
    <string name="search">Search Now</string>
    <string name="locationText">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="event_dates">Event Dates</string>
    <string name="pickStartDate">Date From</string>
    <string name="pickEndDate">DATE To</string>
    <string name="capacityText">Capacity</string>
    <string name="enter_capacity">Enter Capacity</string>
    <string name="eventTypeText">Event Type</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="pickStartTime">Time From</string>
    <string name="pickEndTime">Time To</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="image">image</string>
    <string name="capacity">Capacity</string>
    <string name="budget">Budget</string>
    <string name="sample_money">2500</string>
    <string name="sample_money2">15000</string>
    <string name="pesos">₱</string>
    <string name="minimum">Min.</string>
    <string name="maximum">Max.</string>
    <string name="minimum_budget">Minimum budget</string>
    <string name="maximum_budget">Maximum budget</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="facebook_app_id">399807174092686</string>
    <string name="fb_login_protocol_scheme">fb399807174092686</string>
    <string name="clientId">861816809760-0vv9ofvdmqvook8u1l8opjmhch0frqfo.apps.googleusercontent.com</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" android:ignore="ExtraTranslation">SCFCHteOEPCoU3T8GDelnskEh
    </string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" android:ignore="ExtraTranslation">
        mLqCSZQekix2OBQVEGqhaGDeytXu0pKZo7aOV5VAHBgXtNo4hR
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">DONE</string>
    <string name="skip">SKIP</string>
    <string name="findeventsanywhere">Find Events Anywhere!</string>
    <string name="basic_description1">Seek and you shall find it</string>
    <string name="communicate_with_company">Communicate with Company</string>
    <string name="chat_now">You can easily chat them</string>
    <string name="rate_and_review_places">Rate and Review Places</string>
    <string name="rate_and_review_what_you_have_experienced">Rate and review what you have experienced</string>
    <string name="date">Date</string>
    <string name="open_camera">Open Camera</string>
    <string name="todo">TODO</string>
    <string name="get_location">Get Location</string>
    <string name="email">Email</string>
    <string name="sample_email">firstname.surname@gmail.com</string>
    <string name="sample_password">********</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="enter_your_reviews">Enter your reviews here...</string>
    <string name="submit_ratings_and_reviews">Submit Ratings and Reviews</string>
    <string name="ratings_and_reviews">Ratings And Reviews</string>
    <string name="message_me">Message Me</string>
    <string name="visitor_count">Visitor Count:</string>
    <string name="rate_review">Rate and Review</string>
    <string name="click_here_to_rate_and_review">Click Here to Rate and Review</string>
    <string name="filter_search">Filter Search</string>
    <string name="my_location">My Location</string>
    <string name="input_star">Please input a rating</string>
    <string name="logSucess">Login Successful</string>
    <string name="title_activity_company_messages">CompanyMessages</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="plsgeturlocation">Please get your location</string>
    <string name="get">Please get your location</string>
</resources>