<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdvancedSearch">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/root_layout"
            tools:layout_editor_absoluteY="81dp"
            android:minHeight="207dp"
    >
        <TextView
                android:text="@string/search_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchNowText"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>
        <RelativeLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <!--<Button-->
                    <!--android:text="@string/open_camera"-->
                    <!--android:layout_width="170dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/openCameraBtn"-->
                    <!--android:layout_marginStart="12dp"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:layout_marginEnd="12dp"/>-->

            <Button
                    android:id="@+id/btn_get_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/get_location"/>
        </RelativeLayout>
        <TextView
                android:id="@+id/tv_result"
                android:layout_width="260dp"
                android:layout_gravity="center"
                android:hint="@string/my_location"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp"/>
        <RelativeLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/pickStartTime"
                    android:layout_width="170dp"
                    android:textSize="@dimen/fontsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeStartBtn"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            <Button
                    android:text="@string/pickEndTime"
                    android:layout_width="170dp"
                    android:textSize="@dimen/fontsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeEndBtn"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
            />

        </RelativeLayout>
        <RelativeLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/pickStartDate"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontsize"
                    android:id="@+id/pickStartDateBtn"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            <Button
                    android:text="@string/pickEndDate"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontsize"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/pickEndDateBtn"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
            />
        </RelativeLayout>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:hint="@string/enter_capacity"
                android:id="@+id/capacity"
                android:inputType="number"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                tools:targetApi="o"/>

        <RelativeLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/eventTypeText"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="93dp"
                    android:layout_height="19dp"
                    android:id="@+id/textView4"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/black"/>
            <Spinner
                    android:layout_width="246dp"
                    android:layout_height="35dp"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/eventType"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
            />
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_alignParentStart="true"
                    android:id="@+id/textView6"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    tools:ignore="RelativeOverlap"/>

            <TextView
                    android:text="@string/pesos"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="12dp"
                    android:textColor="@android:color/black"
                    tools:ignore="RelativeOverlap"/>

            <EditText
                    android:layout_width="76dp"
                    android:layout_height="39dp"
                    android:inputType="number"
                    android:hint="@string/sample_money"
                    android:ems="10"
                    android:id="@+id/miniBudget"
                    android:layout_marginEnd="170dp"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    android:autofillHints=""
                    tools:targetApi="o"/>

        </RelativeLayout>

        <Button
                android:text="@string/next"
                android:layout_width="157dp"
                android:layout_height="41dp"
                android:id="@+id/submitBtn"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>


    </LinearLayout>
</ScrollView>