<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical">

    <TextView
            android:text="@string/rate_review"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text|textMultiLine"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_reviews"
            android:id="@+id/editTextName"
            android:autofillHints="Nice" tools:targetApi="o"/>

    <RatingBar
            android:layout_width="wrap_content"
            android:max="5"
            android:layout_marginTop="15dp"
            android:stepSize="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content" android:id="@+id/ratingBar"
    />
    <Button
            android:text="@string/submit_ratings_and_reviews"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonSave"/>

</LinearLayout>