<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OpenId" tools:layout_editor_absoluteY="81dp">

    <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="188dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.538"
            android:layout_marginTop="320dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="188dp"
            android:layout_height="47dp"
            android:layout_centerInParent="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.538" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"/>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/loginButtonTwitter"
            android:layout_width="188dp"
            android:layout_height="47dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.538"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sign_in_button"/>

    <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Hello World!"
            android:textSize="30sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="252dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.502"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:autofillHints="@string/email"
            android:id="@+id/email_tv" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/sample_email"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" tools:text="Email:"
            android:textSize="24sp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/email_tv"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" tools:text="Password:"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/password_tv"/>
    <Button
            android:text="@string/submit"
            android:layout_width="168dp"
            android:layout_height="41dp"
            android:id="@+id/submit_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.585" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_tv"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:autofillHints="@string/sample_password"
            android:id="@+id/password_tv"
            android:hint="@string/sample_password" android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/email_tv"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>